[gd_scene load_steps=3 format=3 uid="uid://bwt7snwuhtl52"]

[ext_resource type="Script" path="res://prog76a.gd" id="1_5bdmu"]

[sub_resource type="LabelSettings" id="LabelSettings_qbjor"]

[node name="Prog76a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -98.0
offset_top = -44.0
offset_right = -98.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5bdmu")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 112.0
offset_top = 128.0
offset_right = 352.0
offset_bottom = 154.0
text = "Enter a number you dislike between 1-9:"
label_settings = SubResource("LabelSettings_qbjor")

[node name="lblOutput" type="Label" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 230.0
offset_right = 745.0
offset_bottom = 413.0
text = " - -"
label_settings = SubResource("LabelSettings_qbjor")

[node name="txtDisNumber" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 443.0
offset_top = 120.0
offset_right = 573.0
offset_bottom = 151.0

[node name="btnCalculate" type="Button" parent="."]
layout_mode = 0
offset_left = 145.0
offset_top = 427.0
offset_right = 346.0
offset_bottom = 504.0
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 370.0
offset_top = 428.0
offset_right = 571.0
offset_bottom = 505.0
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 590.0
offset_top = 429.0
offset_right = 791.0
offset_bottom = 506.0
text = "Exit"

[connection signal="pressed" from="btnCalculate" to="." method="_on_btn_calculate_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
